<resources>
    <string name="app_nameappsplash" translatable="false">yewulibs-demo1-appsplash</string>
    <string name="app_nameappsplash0" translatable="false">福生APP框架演示版本</string>
    <string name="app_nameappsplash1" translatable="false">APP框架-元旦</string>
    <string name="app_nameappsplash2" translatable="false">APP框架-春节</string>
    <string name="app_nameappsplash3" translatable="false">APP框架-清明</string>
    <string name="app_nameappsplash4" translatable="false">APP框架-五一</string>
    <string name="app_nameappsplash5" translatable="false">APP框架-端午</string>
    <string name="app_nameappsplash6" translatable="false">APP框架-中秋</string>
    <string name="app_nameappsplash7" translatable="false">APP框架-国庆</string>
    <string name="appsplash_djs" translatable="false">跳过(%s)</string>
</resources>
